--- a/project_team/views/project_team_view.xml
+++ b/project_team/views/project_team_view.xml
@@ -127,12 +127,12 @@
         <field name="arch" type="xml">
             <field name="partner_id" position="after">
                 <field name="team_id"
-                       context="{'form_view_ref': 'project_team.project_team_form_view', 'default_type_team':'project'}"/>
+                       context="{'form_view_ref': 'project_team_form_view', 'default_type_team':'project'}"/>
             </field>
             <page name="settings" position="after">
                 <page string="Team">
                     <field name="members" widget="many2many_kanban"
-                           context="{'form_view_ref': 'project_team.project_team_form_view', 'default_type_team':'project'}">
+                           context="{'form_view_ref': 'project_team_form_view', 'default_type_team':'project'}">
                         <kanban quick_create="false" create="true" delete="true">
                             <field name="id"/>
                             <field name="image_small"/>
